fix: harden writer agent loop and unify internal error feedback
- parse writer responses more robustly when JSON is preceded by prose
- support shell-like rg/find argument patterns in context tool execution
- allow more writer tool rounds before aborting for missing context
- post consistent user-visible internal error comments for writer and coding flows
- add regression tests for parser, tool execution, and failure notification paths